# cola

./: .gitmodules  CMakeLists.txt  Makefile_g++  README.md  index.html  params.json
sample/: canis.X.part.fa  homo.X.part.fa
src/: CodonTranslate.cc  CodonTranslate.h  DNAVector.cc  DNAVector.h
src/Cola/: AlignmentSet.h  Cola.cc  Cola.h  IAligner.h  NOIAligner.h  NSaligner.cc  NSaligner.h
src/FastAlign/: AlignmentParams.h  AlignmentThreads.cc  AlignmentThreads.h  DNASeqs.cc  DNASeqs.h  FastAlignUnit.cc  FastAlignUnit.h  GlobUsage.cc  GlobUsage.h  SeedingObjects.cc  SeedingObjects.h  SeedingThreads.cc  SeedingThreads.h  SuffixArray.h  SyntenicSeeds.cc  SyntenicSeeds.h  ThreadQueueVec.h  Version.h  runFAlign.cc
src/cola/: AlignmentCola.cc  AlignmentCola.h  AlignmentSet.cc  Cola.cc  Cola.h  EditGraph.h  IAligner.h  MultiAlignCola.cc  NOIAligner.cc  NSaligner.cc  NSaligner.h  RunCola.cc  findColaSigDist.cc  runCola.cc
src/fastAlign/: AlignmentParams.h  AlignmentThreads.cc  AlignmentThreads.h  CachedVec.h  DNASeqs.cc  DNASeqs.h  FastAlignUnit.cc  FastAlignUnit.h  GlobUsage.cc  GlobUsage.h  RunFAlign.cc  SeedingObjects.cc  SeedingObjects.h  SeedingThreads.cc  SeedingThreads.h  SuffixArray.h  SyntenicSeeds.cc  SyntenicSeeds.h  ThreadQueueVec.h  runFAlign.cc
